Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71819

qt.multimedia.plugins.directshow: Failed to connect the audio sample grabber

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 5.13
    • 5.11.2
    • Multimedia
    • None
    • Creator 4.7.2, Qt Kit 5.11.2 MSVC2017 / 64 / Windows 10
    • Windows

    Description

      running project using QAudioprobes, return error qt.multimedia.plugins.directshow: Failed to connect the audio sample grabber with Qt Kit 5.11.2 MSVC2017 / 64 and Kit 5.12 / MSVC2017 / 64 on windows.

      Same project work fine with Qt Kit 5.10.1 MSVC2017 / 64 / Windows

      project:
      https://github.com/gonzoua/qt-demo-player.git

      usage, add .mp3 file in qapp directory (eg E:\downloads\build-demo-player-Desktop_Qt_5_11_2_MSVC2017_64bit-Release\file1.mp3), add file name.mp3 in command line arguments of the running parameters.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            valentyn.doroshchuk Valentyn Doroshchuk
            filipdns philippe denis
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes